package Model;

public enum HintType {
    KNOWN_COLOR,
    KNOWN_POSITION
}
